--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ li {
 
 .articles {
   text-align: left;
+  padding: 0;
 }
 .article-title {
   text-align: center;
@@ -65,6 +66,7 @@ li {
   border-color: rgb(48, 48, 48);
   border-radius: 0.3em;
   margin: 2em 2em 2em 2em;
+  padding: 1em;
 }
 
 .comments-section {
