query drop selects styled

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,12 @@ li {
   flex-direction: column;
   margin: 1em;
 }
+.query-selectors {
+  display: inline-flex;
+}
+.query-selector {
+  margin: 1em;
+}
 
 .article-body-card {
   text-align: left;
